--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<configuration>
 			<testFailureIgnore>true</testFailureIgnore>
 			<suiteXmlFiles>
-				<suiteXmlFile>testng.xml</suiteXmlFile>
+				<suiteXmlFile>C:\Users\Raj kumar\Documents\mygitrepos\REST-API-FRAMEWORK-ADVANCED\testng.xml</suiteXmlFile>
 			</suiteXmlFiles>
 		</configuration>
 	</plugin>
@@ -114,7 +114,7 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>3.16-beta2</version>
+			<version>3.17</version>
 		</dependency>
 
 
@@ -189,13 +189,19 @@
 			<scope>compile</scope>
 		</dependency>
 
+<!--	  <dependency>-->
+<!--		  <groupId>org.projectlombok</groupId>-->
+<!--		  <artifactId>lombok</artifactId>-->
+<!--		  <version>1.18.12</version>-->
+<!--		  <scope>provided</scope>-->
+<!--	  </dependency>-->
 	  <dependency>
-		  <groupId>org.projectlombok</groupId>
-		  <artifactId>lombok</artifactId>
-		  <version>1.18.12</version>
-		  <scope>provided</scope>
+		  <groupId>io.rest-assured</groupId>
+		  <artifactId>rest-assured</artifactId>
+		  <version>4.0.0</version>
+		  <scope>compile</scope>
 	  </dependency>
 
-	</dependencies>
+  </dependencies>
 
 </project>
